# bthomev2

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  keywords.txt  library.json  library.json.j2  library.properties  library.properties.j2  platformio.ini.example
.github/: FUNDING.yml
.github/skills/bthome-logger/: SKILL.md
.github/skills/cortex-debug/: SKILL.md
.github/skills/nrf52840-ble-bthomev2/: SKILL.md
.github/skills/nrf52840-platformio/: SKILL.md
.github/workflows/: pio-publish.yml  pypi-publish.yml  release.yml
docs/: I18N.md  Makefile  README.md  build-all.sh  build.sh  changelog.rst  conf.py  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt  setup_translation.sh
docs/_templates/: language_switcher.html
docs/de/: conf.py
docs/development/: contributing.rst  release-process.rst  workflow.rst
docs/locale/de/LC_MESSAGES/: I18N.po  README.mo  README.po  changelog.po  index.mo  index.po  index_translations.txt  installation.po  license.mo  license.po  quickstart.po
docs/tools/: bthome-logger.rst  usage.rst
examples/ESP32_Basic/: ESP32_Basic.ino  README.md  platformio.ini
examples/ESP32_Basic/src/: main.cpp
examples/ESP32_Button/: ESP32_Button.ino  README.md  platformio.ini
examples/ESP32_Button/src/: main.cpp
examples/ESP32_MultipleSensors/: ESP32_MultipleSensors.ino  README.md  platformio.ini
examples/ESP32_MultipleSensors/src/: main.cpp
examples/nRF52_Basic/: README.md  nRF52_Basic.ino  platformio.ini  post_upload.py
examples/nRF52_Basic/src/: main.cpp
src/: BThomeV2.cpp  BThomeV2.h  BThomeV2_ESP32.cpp  BThomeV2_ESP32.h  BThomeV2_nRF52.cpp  BThomeV2_nRF52.h  BaseDevice.cpp  BaseDevice.h  BtHomeV2Device.cpp  BtHomeV2Device.h  data_types.h  definitions.h
tools/: README.md  _version.py  bthome_logger.py  pyproject.toml
(+5 files in other folders)
