[project]
name = "bthome-logger"
dynamic = ["version"]
description = "BThome v2 BLE Advertisement Logger for debugging and monitoring BThome devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Glaser", email = "daniel.glaser@tu-ilmenau.de"}
]
maintainers = [
    {name = "Daniel Glaser", email = "daniel.glaser@tu-ilmenau.de"}
]
keywords = ["bthome", "bluetooth", "ble", "home-assistant", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bleak>=0.21.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/the78mole/bthomev2"
Repository = "https://github.com/the78mole/bthomev2"
Issues = "https://github.com/the78mole/bthomev2/issues"
Documentation = "https://github.com/the78mole/bthomev2/blob/main/tools/README.md"

[project.scripts]
bthome-logger = "bthome_logger:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev", root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["bthome_logger.py"]

[tool.hatch.build.targets.sdist]
include = ["bthome_logger.py", "README.md", "requirements.txt", "pyproject.toml", "LICENSE"]
